trunk/Archive2/7f/ce787aca02bdf5/output
main.cpp: In function 'int main()':
main.cpp:8:15: error: 'rbegin' is not a member of 'std'
     auto vi = std::rbegin(v);
               ^
main.cpp:12:15: error: 'rbegin' is not a member of 'std'
     auto ai = std::rbegin(a);
               ^
